# Proyectodegrado

./: .dockerignore  .gitignore  README.md  Taskfile.yml  docker-compose.yml
docs/: doc-tecnica-api.md  doc-tecnica-general.md  doc-tecnica-ui.md
escania-api/: Dockerfile  env.template  pyproject.toml
escania-api/escania/: main.py
escania-api/escania/api/: router.py  server.py
escania-api/escania/api/handlers/: __init__.py  ai.py  firebase_scan_handlers.py  firebase_scheduled_handlers.py
escania-api/escania/config/: config.py
escania-api/escania/scan/schemas/: scan_schemas.py  schemas.py
escania-api/escania/scan/services/: ai_analytics.py  scanner_firebase.py  vulns.py
escania-api/escania/scan/storage/: sqlite.py
escania-api/escania/scan/storage/firebase/: __init__.py  alerts.py  core.py  scans.py  sheduled.py
escania-ui/: Dockerfile  env.template  package.json  tailwind.config.js
escania-ui/app/: firebase.ts  globals.css  layout.tsx
escania-ui/app/admin/: page.tsx
escania-ui/app/alerts/: page.tsx
escania-ui/app/dashboard/: page.tsx
escania-ui/app/login/: page.tsx
escania-ui/app/reports/: page.tsx
escania-ui/components/admin/: commands-list.tsx  global-alerts-list.tsx  scheduled-scans-list.tsx
escania-ui/components/auth/: auth-provider.tsx  login-form.tsx
escania-ui/components/dashboard/: ai-analysis.tsx  dashboard-header.tsx  dashboard-summary.tsx  dashboard-tabs.tsx  hosts-list.tsx  scan-overview.tsx  (+1 more)
escania-ui/services/: scan-processor.ts
escania-ui/types/: scan-types.ts
escania-ui/utils/: nmap-formatter.ts
(+55 files in other folders)
